--- a/fkl_cli/Cargo.toml
+++ b/fkl_cli/Cargo.toml
@@ -3,7 +3,7 @@ name = "fkl_cli"
 version = "0.2.0"
 authors = ["Phodal Huang <h@phodal.com>"]
 description = "Feakin is a architecture design and visual collaboration tool. This is the parser for Feakin."
-repository = "https://github.com/feakin/feakin/"
+repository = "https://github.com/feakin/fklang"
 categories = ["command-line-interface", "parsing"]
 keywords = [
   "architecture",
