--- a/fkl_codegen_dot/Cargo.toml
+++ b/fkl_codegen_dot/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 authors = ["Phodal Huang <h@phodal.com>"]
 description = ""
-repository = "https://github.com/feakin/feakin/"
+repository = "https://github.com/feakin/fklang"
 license = "MPL-2.0"
 
 [dependencies]
