--- a/fkl_parser_wasm/Cargo.toml
+++ b/fkl_parser_wasm/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.2"
 authors = ["Phodal Huang <h@phodal.com>"]
 edition = "2018"
 description = ""
-repository = "https://github.com/feakin/feakin/"
+repository = "https://github.com/feakin/fklang"
 license = "MPL-2.0"
 
 [lib]
