--- a/fklang/Cargo.toml
+++ b/fklang/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "fkl"
+name = "fklang"
 version = "0.2.0"
 authors = ["Phodal Huang <h@phodal.com>"]
 description = "Feakin is a architecture design and visual collaboration tool. This is the parser for Feakin."
