fix: fix format issues for newline

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,5 +13,5 @@ members = [
   "codegen_plugins/feakin-aws-lambda",
 ]
 
-[profile.release.package.fkl-wasm]
+[profile.release.package.fkl-parser-wasm]
 opt-level = 2
