--- a/fkl_cli/Cargo.toml
+++ b/fkl_cli/Cargo.toml
@@ -33,6 +33,9 @@ serde_json = "1.0"
 fkl-parser = { path = "../fkl_parser", version = "0.2.1" }
 fkl_codegen_java = { path = "../fkl_codegen_java", version = "0.2.1" }
 
+tree-sitter = "=0.19.3"
+tree-sitter-java = "0.19.0"
+
 [[bin]]
 name = "fkl"
 path = "src/main.rs"
