--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,5 +13,6 @@ members = [
   "codegen_plugins/feakin-aws-lambda",
 ]
 
-[profile.release.package.fkl-parser-wasm]
-opt-level = 2
+[profile.release]
+# Tell `rustc` to optimize for small code size.
+opt-level = "s"
