--- a/fkl_cli/Cargo.toml
+++ b/fkl_cli/Cargo.toml
@@ -36,6 +36,10 @@ fkl_codegen_java = { path = "../fkl_codegen_java", version = "0.2.1" }
 tree-sitter = "=0.19.3"
 tree-sitter-java = "0.19.0"
 
+# logging
+log = "0.4.0"
+env_logger = "0.9.0"
+
 [[bin]]
 name = "fkl"
 path = "src/main.rs"
