--- a/fkl_parser_wasm/Cargo.toml
+++ b/fkl_parser_wasm/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "fkl-wasm"
-version = "0.1.2"
+version = "0.2.2"
 authors = ["Phodal Huang <h@phodal.com>"]
 edition = "2018"
 description = ""
@@ -29,8 +29,8 @@ console_error_panic_hook = { version = "0.1.7", optional = true }
 # Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
 wee_alloc = { version = "0.4.5", optional = true }
 
-fkl-parser = { path = "../fkl_parser" }
-fkl-dot = { path = "../fkl_codegen_dot" }
+fkl-parser = { path = "../fkl_parser", version = "0.2.2" }
+fkl-dot = { path = "../fkl_codegen_dot", version = "0.1.0" }
 
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
