refactor: rename mod

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ members = [
   "fkl_lsp",
   "fkl_parser",
   "fkl_parser_wasm",
-  "fkl_codegen_dot",
+  "fkl_dot",
   "fkl_codegen_java",
   "codegen_plugins/feakin-aws-lambda",
 ]
