docs: thinking in file resolver

--- a/fkl_parser/Cargo.toml
+++ b/fkl_parser/Cargo.toml
@@ -28,3 +28,6 @@ pest_derive = "2.3.1"
 indexmap = "1.9.1"
 
 serde = { version = "1", features = ["derive"] }
+
+[dev-dependencies]
+mockall = "0.11.2"
