--- a/fkl_cli/Cargo.toml
+++ b/fkl_cli/Cargo.toml
@@ -40,6 +40,9 @@ tree-sitter-java = "0.19.0"
 log = "0.4.0"
 env_logger = "0.9.0"
 
+# http for mock and verify api
+reqwest = { version = "0.11", features = ["blocking", "json"] }
+
 [[bin]]
 name = "fkl"
 path = "src/main.rs"
