--- a/fkl_cli/Cargo.toml
+++ b/fkl_cli/Cargo.toml
@@ -43,6 +43,9 @@ env_logger = "0.9.0"
 # http for mock and verify api
 reqwest = { version = "0.11", features = ["blocking", "json"] }
 
+[dev-dependencies]
+trycmd = "0.14.0"
+
 [[bin]]
 name = "fkl"
 path = "src/main.rs"
