--- a/fkl_cli/Cargo.toml
+++ b/fkl_cli/Cargo.toml
@@ -42,6 +42,8 @@ env_logger = "0.9.0"
 
 # http for mock and verify api
 reqwest = { version = "0.11", features = ["blocking", "json"] }
+# base64 ecnode/decode
+base64 = "0.13.0"
 
 [dev-dependencies]
 trycmd = "0.14.0"
