--- a/fkl_cli/Cargo.toml
+++ b/fkl_cli/Cargo.toml
@@ -42,6 +42,8 @@ walkdir = "2"
 log = "0.4.0"
 env_logger = "0.9.0"
 
+regex = "1.6.0"
+
 # http for mock and verify api
 reqwest = { version = "0.11", features = ["blocking", "json"] }
 # base64 ecnode/decode
