--- a/fkl_cli/Cargo.toml
+++ b/fkl_cli/Cargo.toml
@@ -36,7 +36,10 @@ fkl_codegen_java = { path = "../fkl_codegen_java", version = "0.2.2" }
 # code ident
 tree-sitter = "=0.19.3"
 tree-sitter-java = "0.19.0"
+
 walkdir = "2"
+# The ignore crate provides a fast recursive directory iterator that respects various filters such as globs, file types and .gitignore files.
+ignore = "0.4"
 
 # logging
 log = "0.4.0"
