--- a/fkl_dot/Cargo.toml
+++ b/fkl_dot/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
 name = "fkl-dot"
 version = "0.1.0"
-edition = "2021"
 authors = ["Phodal Huang <h@phodal.com>"]
-description = ""
+edition = "2018"
+description = "Feakin is a architecture design and visual collaboration tool. This is the parser for Feakin."
 repository = "https://github.com/feakin/fklang"
 license = "MPL-2.0"
 
