--- a/fkl_parser_wasm/Cargo.toml
+++ b/fkl_parser_wasm/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
 name = "fkl-wasm"
-version = "0.2.2"
+version = "0.3.0"
 authors = ["Phodal Huang <h@phodal.com>"]
 edition = "2018"
-description = ""
+description = "Feakin is a architecture design and visual collaboration tool. This is the parser for Feakin."
 repository = "https://github.com/feakin/fklang"
 license = "MPL-2.0"
 
