--- a/fkl_cli/Cargo.toml
+++ b/fkl_cli/Cargo.toml
@@ -64,8 +64,10 @@ sqlx = { version = "0.6", features = [
 # microsoft sql server
 #tiberius = { version = "0.11" }
 #oracle = { version = "0.5" }
-
+futures = "0.3"
 tokio = { version = "1", features = ["full"] }
+
+async-trait = "0.1.58"
 
 [dev-dependencies]
 trycmd = "0.14.0"
