--- a/fkl_cli/Cargo.toml
+++ b/fkl_cli/Cargo.toml
@@ -55,8 +55,8 @@ base64 = "0.13.0"
 
 # mysql & postres
 sqlx = { version = "0.6", features = [
-  "runtime-tokio-native-tls" , # tls
-  "postgres", "mysql",         # db
+  "runtime-tokio-native-tls" ,       # tls
+  "postgres", "mysql", "sqlite",     # db
   "chrono", "bigdecimal", "uuid", "json", "ipnetwork", "mac_address", "bit-vec",
   "offline"
 ] }
