--- a/fkl_cli/Cargo.toml
+++ b/fkl_cli/Cargo.toml
@@ -72,6 +72,7 @@ async-trait = "0.1.58"
 # http server
 rocket = { version = "0.5.0-rc.2", features = ["json"] }
 figment = { version = "0.10" }
+rand = "0.8.5"
 
 [dev-dependencies]
 trycmd = "0.14.0"
