--- a/fkl_cli/Cargo.toml
+++ b/fkl_cli/Cargo.toml
@@ -73,7 +73,7 @@ async-trait = "0.1.58"
 rocket = { version = "0.5.0-rc.2", features = ["json"] }
 figment = { version = "0.10" }
 # type for uuid
-# uuid = { version = "1.2.1", features = [ "v4"] }
+uuid = { version = "1.2.1", features = ["v4"] }
 chrono = "0.4"
 rand = "0.8.5"
 
