--- a/fkl_cli/Cargo.toml
+++ b/fkl_cli/Cargo.toml
@@ -75,6 +75,7 @@ figment = { version = "0.10" }
 # type for uuid
 uuid = { version = "1.2.1", features = ["v4"] }
 phf = { version = "0.11", features = ["macros"] }
+indexmap = "1.9.1"
 chrono = "0.4"
 rand = "0.8.5"
 
