--- a/fkl_lsp/Cargo.toml
+++ b/fkl_lsp/Cargo.toml
@@ -13,8 +13,12 @@ env_logger = "0.9"
 ropey = "1.0"
 serde_json = "1.0"
 tokio = { version = "1.17.0", features = ["full"] }
+tokio-util = { version = "0.7.4", features = ["compat"], optional = true }
 tower-lsp = { version = "0.17.0"}
 serde = { version = "1.0", features = ["derive"] }
 dashmap = "5.4"
 log = "0.4"
 im-rc = "15.0"
+
+[features]
+platform-agnostic = ["tokio-util"]
