refactor: split mir models

--- a/fkl_mir/Cargo.toml
+++ b/fkl_mir/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "fkl_codegen_java"
+name = "fkl-mir"
 version = "0.4.0"
 authors = ["Phodal Huang <h@phodal.com>"]
 description = "Feakin is a architecture design and visual collaboration tool. This is the parser for Feakin."
@@ -22,10 +22,5 @@ include = [
 ]
 
 [dependencies]
-genco = "0.17.2"
-anyhow = "1.0.31"
-
-rust-stemmers = "1.2.0"
-
-fkl-parser = { path = "../fkl_parser", version = "0.4.0" }
-fkl-mir = { path = "../fkl_mir", version = "0.4.0" }
+serde = { version = "1", features = ["derive"] }
+url = "2.3.1"
