--- a/fkl_parser_wasm/Cargo.toml
+++ b/fkl_parser_wasm/Cargo.toml
@@ -29,6 +29,7 @@ console_error_panic_hook = { version = "0.1.7", optional = true }
 # Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
 wee_alloc = { version = "0.4.5", optional = true }
 
+fkl-mir = { path = "../fkl_mir", version = "0.4.0" }
 fkl-parser = { path = "../fkl_parser", version = "0.4.0" }
 fkl-dot = { path = "../fkl_dot", version = "0.1.0" }
 
