--- a/fkl_cli/Cargo.toml
+++ b/fkl_cli/Cargo.toml
@@ -30,6 +30,7 @@ syntect = "5.0"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1.0"
 
+fkl-mir = { path = "../fkl_mir", version = "0.4.0" }
 fkl-parser = { path = "../fkl_parser", version = "0.4.0" }
 fkl_codegen_java = { path = "../fkl_codegen_java", version = "0.4.0" }
 
