--- a/fkl_ext_api/Cargo.toml
+++ b/fkl_ext_api/Cargo.toml
@@ -1,8 +1,9 @@
 [package]
-name = "fkl_extension"
+name = "fkl_ext_api"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+fkl-mir = { path = "../fkl_mir", version = "0.4.0" }
