--- a/fkl_ext_api/Cargo.toml
+++ b/fkl_ext_api/Cargo.toml
@@ -6,4 +6,6 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+downcast-rs = "1.2.0"
+
 fkl-mir = { path = "../fkl_mir", version = "0.4.0" }
