--- a/fkl_ext_loader/Cargo.toml
+++ b/fkl_ext_loader/Cargo.toml
@@ -7,3 +7,6 @@ edition = "2021"
 
 [dependencies]
 fkl-mir = { path = "../fkl_mir", version = "0.4.0" }
+
+libloading = { version = "0.7" }
+thiserror = "1.0"
