--- a/fkl_ext_loader/Cargo.toml
+++ b/fkl_ext_loader/Cargo.toml
@@ -8,5 +8,8 @@ edition = "2021"
 [dependencies]
 fkl-mir = { path = "../fkl_mir", version = "0.4.0" }
 
+fkl_ext_api = { path = "../fkl_ext_api", version = "0.1.0" }
+
 libloading = { version = "0.7" }
 thiserror = "1.0"
+
