--- a/fkl_ext_api/Cargo.toml
+++ b/fkl_ext_api/Cargo.toml
@@ -7,5 +7,6 @@ edition = "2021"
 
 [dependencies]
 downcast-rs = "1.2.0"
+async-trait = "0.1.58"
 
 fkl-mir = { path = "../fkl_mir", version = "0.4.0" }
