--- a/examples/ext_hello_world/Cargo.toml
+++ b/examples/ext_hello_world/Cargo.toml
@@ -12,3 +12,7 @@ fkl-mir = { path = "../../fkl_mir", version = "0.4.0" }
 async-trait = "0.1.58"
 
 rdkafka = { version = "0.25", features = ["cmake-build"] }
+
+
+[lib]
+crate-type = ["cdylib"]
