--- a/examples/ext_message_kafka/Cargo.toml
+++ b/examples/ext_message_kafka/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "ext_hello_world"
+name = "ext_message_kafka"
 version = "0.1.0"
 edition = "2021"
 
@@ -10,6 +10,9 @@ fkl_ext_api = { path = "../../fkl_ext_api", version = "0.1.0" }
 fkl-mir = { path = "../../fkl_mir", version = "0.4.0" }
 
 async-trait = "0.1.58"
+
+rdkafka = { version = "0.29.0", features = ["cmake-build"] }
+
 
 [lib]
 crate-type = ["cdylib"]
