refactor: thinking in org ext #10

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,9 +14,7 @@ members = [
   "fkl_ext_api",
   "fkl_ext_loader",
   # for codegen
-  "extensions/codegen-aws-lambda",
-  # for swagger
-  "extensions/sourceset-swagger",
+  "extensions/*",
   "examples/*"
 ]
 
