--- a/fkl_codegen_java/Cargo.toml
+++ b/fkl_codegen_java/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "fkl_codegen_java"
+name = "fkl-codegen-java"
 version = "0.4.0"
 authors = ["Phodal Huang <h@phodal.com>"]
 description = "Feakin is a architecture design and visual collaboration tool. This is the parser for Feakin."
