refactor: update package defs

--- a/extensions/codegen-aws/Cargo.toml
+++ b/extensions/codegen-aws/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "fkl-runner-kafka"
+name = "fkl-codegen-aws"
 version = "0.1.0"
 authors = ["Phodal Huang <h@phodal.com>" ]
 description = "Feakin is a architecture design and visual collaboration tool. This is the parser for Feakin."
@@ -22,13 +22,3 @@ include = [
 ]
 
 [dependencies]
-fkl_ext_api = { path = "../../fkl_ext_api", version = "0.1.0" }
-fkl-mir = { path = "../../fkl_mir", version = "0.4.0" }
-
-async-trait = "0.1.58"
-
-rdkafka = { version = "0.29.0", features = ["cmake-build"] }
-
-
-[lib]
-crate-type = ["cdylib"]
