--- a/extensions/sourceset-swagger/Cargo.toml
+++ b/extensions/sourceset-swagger/Cargo.toml
@@ -1,8 +1,24 @@
 [package]
-name = "feakin-sourceset-swagger"
+name = "fkl-ext-sourceset-swagger"
 version = "0.1.0"
+authors = ["Phodal Huang <h@phodal.com>" ]
+description = "Feakin is a architecture design and visual collaboration tool. This is the parser for Feakin."
+repository = "https://github.com/feakin/fklang"
+categories = ["command-line-interface", "parsing"]
+keywords = [
+  "architecture",
+  "parser"
+]
+license = "MPL-2.0"
 edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+include = [
+  "build.rs",
+  "src/**/*",
+  "Cargo.toml",
+  "LICENSE*",
+  "README.md",
+  "benches/**/*",
+  "examples/**/*"
+]
 
 [dependencies]
