--- a/fkl_ext_loader/Cargo.toml
+++ b/fkl_ext_loader/Cargo.toml
@@ -1,9 +1,25 @@
 [package]
 name = "fkl_ext_loader"
 version = "0.1.0"
+authors = ["Phodal Huang <h@phodal.com>" ]
+description = "Feakin is a architecture design and visual collaboration tool. This is the parser for Feakin."
+repository = "https://github.com/feakin/fklang"
+categories = ["command-line-interface", "parsing"]
+keywords = [
+  "architecture",
+  "parser"
+]
+license = "MPL-2.0"
 edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+include = [
+  "build.rs",
+  "src/**/*",
+  "Cargo.toml",
+  "LICENSE*",
+  "README.md",
+  "benches/**/*",
+  "examples/**/*"
+]
 
 [dependencies]
 fkl-mir = { path = "../fkl_mir", version = "0.4.0" }
