--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -27,8 +27,11 @@ jobs:
       - name: Install cargo-llvm-cov
         uses: taiki-e/install-action@cargo-llvm-cov
 
-      - name: Build Plugins
+      - name: Build All
         run: ${{matrix.ENV_VARS}} cargo build --all
+
+      - name: Prepare Plugins
+        run: just prepare
 
       - name: Generate code coverage
         run: cargo llvm-cov --all-features --workspace --lcov --output-path lcov.info
