--- a/extensions/ext-computing/Cargo.toml
+++ b/extensions/ext-computing/Cargo.toml
@@ -12,3 +12,8 @@ fkl-mir = { path = "../../fkl_mir", version = "0.4.0" }
 salsa = { git = "https://github.com/salsa-rs/salsa", package = "salsa-2022" }
 #crossbeam-channel = "0.5.6"
 #dashmap = "5.4.0"
+
+[dev-dependencies]
+actix-web = "4"
+tokio = { version = "1", features = ["full"] }
+futures = "0.3.18"
