--- a/extensions/ext-computing/Cargo.toml
+++ b/extensions/ext-computing/Cargo.toml
@@ -17,3 +17,6 @@ salsa = { git = "https://github.com/salsa-rs/salsa", package = "salsa-2022" }
 actix-web = "4"
 tokio = { version = "1", features = ["full"] }
 futures = "0.3.18"
+
+pest = "2.3.1"
+pest_derive = "2.3.1"
