--- a/extensions/ext-computing/Cargo.toml
+++ b/extensions/ext-computing/Cargo.toml
@@ -10,16 +10,14 @@ fkl_ext_api = { path = "../../fkl_ext_api", version = "0.1.0" }
 fkl-mir = { path = "../../fkl_mir", version = "0.4.0" }
 
 salsa = { git = "https://github.com/salsa-rs/salsa", package = "salsa-2022" }
-#crossbeam-channel = "0.5.6"
-#dashmap = "5.4.0"
-
-pest = "2.3.1"
-pest_derive = "2.3.1"
-
-lazy_static = "1.4.0"
 
 [dev-dependencies]
 actix-web = "4"
 tokio = { version = "1", features = ["full"] }
 futures = "0.3.18"
 exprtk_rs="0.1.0"
+
+#pest = "2.3.1"
+#pest_derive = "2.3.1"
+#
+#lazy_static = "1.4.0"
