--- a/extensions/ext-computing/Cargo.toml
+++ b/extensions/ext-computing/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "fkl-ext-computing"
+name = "fkl_ext_computing"
 version = "0.1.0"
 edition = "2021"
 
@@ -7,7 +7,7 @@ edition = "2021"
 
 [dependencies]
 fkl_ext_api = { path = "../../fkl_ext_api", version = "0.1.0" }
-fkl-mir = { path = "../../fkl_mir", version = "0.4.0" }
+fkl_mir = { path = "../../fkl_mir", version = "0.4.0" }
 
 salsa = { git = "https://github.com/salsa-rs/salsa", package = "salsa-2022" }
 
