--- a/fkl_cli/Cargo.toml
+++ b/fkl_cli/Cargo.toml
@@ -30,9 +30,9 @@ syntect = "5.0"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1.0"
 
-fkl-mir = { path = "../fkl_mir", version = "0.4.0" }
-fkl-parser = { path = "../fkl_parser", version = "0.4.0" }
-fkl-codegen-java = { path = "../fkl_codegen_java", version = "0.4.0" }
+fkl_mir = { path = "../fkl_mir", version = "0.4.0" }
+fkl_parser = { path = "../fkl_parser", version = "0.4.0" }
+fkl_codegen_java = { path = "../fkl_codegen_java", version = "0.4.0" }
 
 # code ident
 tree-sitter = "=0.19.3"
