--- a/fkl_ext_loader/Cargo.toml
+++ b/fkl_ext_loader/Cargo.toml
@@ -22,7 +22,7 @@ include = [
 ]
 
 [dependencies]
-fkl-mir = { path = "../fkl_mir", version = "0.4.0" }
+fkl_mir = { path = "../fkl_mir", version = "0.4.0" }
 
 fkl_ext_api = { path = "../fkl_ext_api", version = "0.1.0" }
 
