--- a/fkl_lsp/Cargo.toml
+++ b/fkl_lsp/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "fkl-lsp"
+name = "fkl_lsp"
 version = "0.1.0"
 authors = ["Phodal Huang <h@phodal.com>" ]
 description = "Feakin is a architecture design and visual collaboration tool. This is the parser for Feakin."
