--- a/fkl_mir/Cargo.toml
+++ b/fkl_mir/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "fkl-mir"
+name = "fkl_mir"
 version = "0.4.0"
 authors = ["Phodal Huang <h@phodal.com>"]
 description = "Feakin is a architecture design and visual collaboration tool. This is the parser for Feakin."
