--- a/extensions/ext_codegen_aws/Cargo.toml
+++ b/extensions/ext_codegen_aws/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "fkl_codegen_aws"
+name = "fkl_ext_codegen_aws"
 version = "0.1.0"
 authors = ["Phodal Huang <h@phodal.com>" ]
 description = "Feakin is a architecture design and visual collaboration tool. This is the parser for Feakin."
