--- a/fkl_parser_wasm/Cargo.toml
+++ b/fkl_parser_wasm/Cargo.toml
@@ -31,7 +31,7 @@ wee_alloc = { version = "0.4.5", optional = true }
 
 fkl_mir = { path = "../fkl_mir", version = "0.4.0" }
 fkl_parser = { path = "../fkl_parser", version = "0.4.0" }
-fkl_dot = { path = "../fkl_dot", version = "0.1.0" }
+fkl_codegen_dot = { path = "../fkl_codegen_dot", version = "0.1.0" }
 
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
