chore: update api and loader version

--- a/fkl_cli/Cargo.toml
+++ b/fkl_cli/Cargo.toml
@@ -49,6 +49,10 @@ colored = "2.0.0"
 
 regex = "1.6.0"
 
+# plugin systems
+fkl_ext_loader = { path = "../fkl_ext_loader", version = "0.4.0" }
+fkl_ext_api = { path = "../fkl_ext_api", version = "0.1.0" }
+
 #------------------- Http Verify -------------------
 
 # http for mock and verify api
